--- a/DjangoClase-main/newPage/templates/pages/GOW.html
+++ b/DjangoClase-main/newPage/templates/pages/GOW.html
@@ -57,15 +57,12 @@
     <br />
     <div class="container3">
       <div class="row">
-        <div class="col-3">
-          <img src="{%static 'img/img//GOW.jpg'%}" width="200" height="250" class="img-fluid" />
-        </div>
-        <div class="col-md-2">
-          <h2>God of War</h2>
-          <p>$30.000CLP</p>
-          <p2 style="text-align: center">En God of War Viaja a un mundo oscuro y elemental de criaturas temibles</p2>
+        <div class="col-6">
+          <h2>BICICLETA EZWAY</h2>
+          <h2>ARO 27.5 2022 ROJO</h2>
           <br />
-          <button class="bg-success border-2">Comprar</button>
+          <p>$900.000CLP</p>
+          <button class="btn btn-primary mt-3">Comprar</button>
         </div>
         <br />
         <div class="col-6">
@@ -84,15 +81,15 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                  <img src="{%static 'img/img/gowcaarrusel1.jpg'%}" class="d-block w-100 imagenesre4" alt="..." />
+                  <img src="{%static 'img/Bici4.png'%}" class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                  <img src="{%static 'img/img/gowcarrusel2.jpg'%} " class="d-block w-100 imagenesre4" alt="..." />
+                  <img src="{%static 'img/Bici4_2.png'%} " class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item">
-                  <img src="{%static 'img/img/gowcarrusel3.jpg'%}" class="d-block w-100 imagenesre4" alt="..." />
+                  <img src="{%static 'img/Bici4_3.png'%}" class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
               </div>
@@ -104,15 +101,17 @@
       </div>
     </div>
 
-    <div class="DescripcionRe4 col-2 col-md-9 text-center">
+    <div class="DescripcionRe4 col-2 col-md-10 text-center">
       <h2>Descripción</h2>
       <p>
-        Una rígida ruda con transmisión 1x10 y horquilla de 100mm, construida para subir tu nivel y desarrollar tu pasión por los senderos. Diseñada para las montañas, para cualquier cosa.
-      </p>
+        Oxford eZway es una bicicleta eléctrica urbana, que será tu perfecta compañera en la ciudad. Ampliará tu potencia al pedalear, mejorará tu rendimiento y bajará tu esfuerzo, lo que te permitirá      </p>
       <button class="btn btn-primary mt-3 mx-auto" id="ver-mas" onclick="verMas()">Ver más</button>
       <div class="collapse" id="expand-description">
         <p>
-          Esta bicicleta está lista para enfrentar cualquier terreno y desafío que se presente. Con su transmisión de 1x10, tendrás un amplio rango de cambios para adaptarte a diferentes condiciones. La horquilla de 100mm te brinda la suspensión necesaria para absorber los impactos y mantener la tracción en los senderos más difíciles. No importa si eres un ciclista experimentado o estás empezando en el mundo del mountain bike, esta bicicleta te acompañará en todas tus aventuras.
+          llegar más lejos y recorrer lugares como nunca antes. eZway cuenta con una batería extraíble con celdas de la reconocida marca Samsung de larga duración y rendimiento, que se puede conectar a cualquier toma de corriente y, además, cuenta con puerto USB para cargar tu celular mientras conduces, 
+          incluyendo también un portacelular en el manubrio. Con sus cinco niveles de asistencia eléctrica, esta bicicleta está diseñada para recorrer senderos y calles de una manera fácil y rápida con menos esfuerzo. eZway cuenta con frenos hidráulicos con sensor eléctrico, el que corta la corriente 
+          automáticamente en cada frenada para tener un mejor control. Además, su suspensión Suntour XCE de 100mm, es ideal para sortear obstáculos en la ciudad y su transmisión Shimano Altus de 8 velocidades te dará la seguridad para enfrentar todo tipo de pendientes. eZway viene con sistema de anclaje 
+          integrado para montar una parrilla y movilizarte con más comodidad.
         </p>
         <button class="btn btn-primary mt-3 mx-auto" id="ver-menos" onclick="verMenos()">Ver menos</button>
       </div>
