--- a/DjangoClase-main/newPage/templates/pages/KTN.html
+++ b/DjangoClase-main/newPage/templates/pages/KTN.html
@@ -58,7 +58,8 @@
     <div class="container3">
       <div class="row">
         <div class="col-6">
-          <h2>BICICLETA INFANTIL ARO 16 SNOWY</h2>
+          <h2>BICICLETA INFANTIL</h2>
+          <h2>ARO 16 SNOWY</h2>
           <p>$75.990CLP</p>
           <br />
           <button class="btn btn-primary mt-3">Comprar</button>
