--- a/DjangoClase-main/newPage/templates/pages/FH5.html
+++ b/DjangoClase-main/newPage/templates/pages/FH5.html
@@ -57,16 +57,11 @@
     <br />
     <div class="container3">
       <div class="row">
-        <div class="col-3">
-          <img src="{%static 'img/img/FORZA.jpg'%}" width="200" height="250" class="img-thumbnail w-50 m-auto" />
-        </div>
-        <div class="col-md-2">
-          <h2>Forza Horizon 5</h2>
-          <p>$40.000CLP</p>
-          <p2 style="text-align: center"
-            >Forza Horizon Conquista la escarpada Sierra Nueva en la experiencia definitiva del rally de Horizon..</p2
-          >
-          <br />
+        <div class="col-6">
+          <h2>BICICLETA KONA</h2>
+          <h2>MAHUNA 2023</h2>
+          <br/>
+          <p>$799.990CLP</p>
           <button class="btn btn-primary mt-3">Comprar</button>
         </div>
         <br />
@@ -86,15 +81,15 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                  <img src="{%static 'img/img/forzacarrusel1.jpg'%}" class="d-block w-100 imagenesre4" alt="..." />
+                  <img src="{%static 'img/Bici5.png'%}" class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                  <img src="{%static 'img/img/forzacarrusel2.jpg'%}" class="d-block w-100 imagenesre4" alt="..." />
+                  <img src="{%static 'img/Bici5_2.png'%}" class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item">
-                  <img src="{%static 'img/img/forzacarrusel3.jpg'%}" class="d-block w-100 imagenesre4" alt="..." />
+                  <img src="{%static 'img/Bici5_3.png'%}" class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
               </div>
@@ -108,13 +103,15 @@
     <div class="DescripcionRe4 col-2 col-md-9 text-center">
       <h2>Descripción</h2>
       <p>
-        Una rígida ruda con transmisión 1x10 y horquilla de 100mm, construida para subir tu nivel y desarrollar tu pasión por los senderos. Diseñada para las montañas, para cualquier cosa.
-      </p>
+        La Mahuna logra ese equilibrio perfecto entre la bicicleta de montaña y diversión todo terreno. Sus ruedas de 29" ruedan fácilmente sobre obstáculos      </p>
       <button class="btn btn-primary mt-3 mx-auto" id="ver-mas" onclick="verMas()">Ver más</button>
       <div class="collapse" id="expand-description">
         <p>
-          Esta bicicleta está lista para enfrentar cualquier terreno y desafío que se presente. Con su transmisión de 1x10, tendrás un amplio rango de cambios para adaptarte a diferentes condiciones. La horquilla de 100mm te brinda la suspensión necesaria para absorber los impactos y mantener la tracción en los senderos más difíciles. No importa si eres un ciclista experimentado o estás empezando en el mundo del mountain bike, esta bicicleta te acompañará en todas tus aventuras.
-        </p>
+          y proporcionan un andar suave y predecible. La horquilla cuenta con 100 mm de recorrido suave y junto con las ruedas de 29", 
+          ayuda a mantener los baches bajo control. Tiene un control total sobre el frenado con potentes frenos de disco hidráulicos. 
+          Una transmisión de 11 velocidades facilita el ataque a colinas duras asegurando que la Mahuna sea tan divertida subiendo como bajando.
+          "La Kona Mahuna es una hardtail sólida y juguetona a un gran precio"–Bicycling Mag.
+         </p>
         <button class="btn btn-primary mt-3 mx-auto" id="ver-menos" onclick="verMenos()">Ver menos</button>
       </div>
     </div>
