--- a/DjangoClase-main/newPage/templates/pages/catalogo.html
+++ b/DjangoClase-main/newPage/templates/pages/catalogo.html
@@ -88,10 +88,10 @@
         </div>
         <div class="col">
           <div class="card ">
-            <a href="{%url 'Gow' %}"><img src="{%static 'img/img/gow.jpg'%}" class="img-thumbnail w-75 m-auto" alt="..."></a>
+            <a href="{%url 'Gow' %}"><img src="{%static 'img/Bici4.png'%}" class="img-thumbnail w-auto m-auto" alt="..."></a>
             <div class="card-body">
-              <h5 class="card-title">God of War(2018)</h5>
-              <p class="card-text">$30.000CLP</p>
+              <h5 class="card-title">BICICLETA EZWAY ARO 27.5</h5>
+              <p class="card-text">$999.990CLP</p>
               <a class="btn btn-primary" href="{%url 'Gow'%}" role="button">Comprar</a>
 
             </div>
@@ -99,12 +99,11 @@
         </div>
         <div class="col">
             <div class="card ">
-              <a href="{%url 'fh5' %}"><img src="{%static 'img/img/forza.jpg'%}" class="img-thumbnail w-75 m-auto" alt="..."></a>
+              <a href="{%url 'fh5' %}"><img src="{%static 'img/Bici5.png'%}" class="img-thumbnail w-auto m-auto" alt="..."></a>
               <div class="card-body">
-                <h5 color="black" class="card-title" >Forza Horizon 5</h5>
-                <p class="card-text">$40.000CLP</p>
+                <h5 color="black" class="card-title" >BICICLETA KONA MAHUNA 2023</h5>
+                <p class="card-text">$799.990CLP</p>
                 <a class="btn btn-primary" href="{%url 'fh5'%}" role="button">Comprar</a>
-
               </div>
             </div>
           </div>
