--- a/DjangoClase-main/newPage/templates/pages/home.html
+++ b/DjangoClase-main/newPage/templates/pages/home.html
@@ -79,7 +79,7 @@
       </div>
     </div>
     <br />
-    <h1>Bienvenidos a ADN-Gaming</h1>
+    <h1>Master Bikes</h1>
     <!-- Contenedor iamgenes home-->
     <div class="container_home">
       <div class="row col-1 col-md-12 justify-content-center">
@@ -94,7 +94,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <a href="{% url 'catalogo' %}"><img src="{% static 'img/img/img_home/juegosVEND.jpg' %}" class="img-thumbnail w-100 m-auto" alt="..." /></a>
+            <a href="{% url 'Gow' %}"><img src="{% static 'img/Bici4.png' %}" class="img-thumbnail w-auto m-auto" alt="..." /></a>
             <div class="card-body">
               <h5 class="card-title">Lo más Vendido</h5>
               <p class="card-text"></p>
@@ -104,7 +104,7 @@
         <div class="col">
           <div class="card">
             <a href="{% url 're4' %}">
-              <img src="{% static 'img/img/img_home/juegosoferta.jpg' %}" class="img-thumbnail w-100 m-auto" alt="..." />
+              <img src="{% static 'img/Bici1_2.jpg' %}" class="img-thumbnail w-auto m-auto" alt="..." />
             </a>
             <div class="card-body">
               <h5 class="card-title">Ofertas Especiales</h5>
@@ -114,9 +114,9 @@
         </div>
         <div class="col">
           <div class="card">
-            <img href="..." src="{% static 'img/img/img_home/lanzamientos.jpg' %}" class="img-thumbnail w-100 m-auto" alt="..." />
+            <img href="..." src="{% static 'img/reparo.png' %}" class="img-thumbnail w-auto m-auto" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Próximamente disponibles</h5>
+              <h5 class="card-title">Reparaciones</h5>
               <p class="card-text"></p>
             </div>
           </div>
@@ -127,9 +127,6 @@
     <div class="contenedor4">
       <a href="{%url 'catalogo'%}">
         <img id="img_cont4_l" src="{%static 'img/img/si.png'%}" alt="" />
-      </a>
-      <a href="{%url 'catalogo'%}">
-        <img id="img_cont4_r" src="{%static 'img/img/img_home/banner_cont4_R.jpg'%}" alt="" />
       </a>
     </div>
     </center>
