--- a/DjangoClase-main/newPage/templates/pages/home.html
+++ b/DjangoClase-main/newPage/templates/pages/home.html
@@ -126,7 +126,7 @@
     <center>
     <div class="contenedor4">
       <a href="{%url 'catalogo'%}">
-        <img id="img_cont4_l" src="{%static 'img/img/si.png'%}" alt="" />
+        <img id="img_cont4_l" src="{%static 'img/no.png'%}" alt="" />
       </a>
     </div>
     </center>
