--- a/DjangoClase-main/newPage/templates/pages/HK.html
+++ b/DjangoClase-main/newPage/templates/pages/HK.html
@@ -43,12 +43,14 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="{%url 'inicio_sesion'%}">Iniciar Sesion</a></li>
                 <li><a class="dropdown-item" href="{%url 'creacion_user'%}">Crear Cuenta</a></li>
-                <li><a class="dropdown-item" href="{%url 'tokens'%}">Tokens</a></li>
                 <li><a class="dropdown-item" href="{%url 'seguridad'%}">Seguridad de Usuario</a></li>
               </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{%url 'contacto'%}">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{%url 'tokens'%}">Reparaciones y Mantenciones</a>
             </li>
           </ul>
         </div>
@@ -79,7 +81,7 @@
                 <button type="button" data-bs-target="#CarruselRe4" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#CarruselRe4" data-bs-slide-to="2" aria-label="Slide 3"></button>
               </div>
-              <div class="carousel-inner">
+              <div class="carousel-inner ">
                 <div class="carousel-item active" data-bs-interval="10000">
                   <img src="{%static 'img/Bici2.png'%}" class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
