--- a/DjangoClase-main/newPage/templates/pages/tokens.html
+++ b/DjangoClase-main/newPage/templates/pages/tokens.html
@@ -46,12 +46,14 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="{%url 'inicio_sesion'%}">Iniciar Sesion</a></li>
                 <li><a class="dropdown-item" href="{%url 'creacion_user'%}">Crear Cuenta</a></li>
-                <li><a class="dropdown-item" href="{%url 'tokens'%}">Tokens</a></li>
                 <li><a class="dropdown-item" href="{%url 'seguridad'%}">Seguridad de Usuario</a></li>
               </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{%url 'contacto'%}">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{%url 'tokens'%}">Reparaciones y Mantenciones</a>
             </li>
           </ul>
         </div>
