--- a/DjangoClase-main/newPage/templates/pages/home.html
+++ b/DjangoClase-main/newPage/templates/pages/home.html
@@ -61,7 +61,7 @@
       <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="{%static 'img/img/Elden Ring.jpg'%}" class="d-block w-100" alt="..." />
+            <img src="{%static 'img/no.png'%}" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
             <img src="{%static 'img/img/img_home/FORZA.jpg'%}" class="d-block w-100" alt="..." />
@@ -128,7 +128,7 @@
     <center>
     <div class="contenedor4">
       <a href="{%url 'catalogo'%}">
-        <img id="img_cont4_l" src="{%static 'img/no.png'%}" alt="" />
+        <img id="img_cont4_l" src="{%static ''%}" alt="" />
       </a>
     </div>
     </center>
