--- a/DjangoClase-main/newPage/templates/pages/contacto.html
+++ b/DjangoClase-main/newPage/templates/pages/contacto.html
@@ -84,12 +84,9 @@
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
     <ul>
       <li>Dirección: 666 Street Fighter, Viña del mar, Narnia</li>
-      <li>Correo electrónico: contacto@ADN-GAMES.com</li>
+      <li>Correo electrónico: contacto@master-bikes.cl</li>
       <li>Teléfono: +56 2 2953 1218</li>
     </ul>
-    <footer>
-      <p>&copy; 2023 ADN-Game. Todos los derechos reservados.</p>
-    </footer>
 
     <script>
       function validarcampon(campo) {
