--- a/DjangoClase-main/newPage/templates/pages/home.html
+++ b/DjangoClase-main/newPage/templates/pages/home.html
@@ -116,7 +116,9 @@
         </div>
         <div class="col">
           <div class="card">
-            <img href="..." src="{% static 'img/reparo.png' %}" class="img-thumbnail w-auto m-auto" alt="..." />
+            <a href="{% url 'tokens' %}"> 
+              <img src="{% static 'img/reparo.png' %}" class="img-thumbnail w-auto m-auto" alt="..."> 
+            </a>
             <div class="card-body">
               <h5 class="card-title">Reparaciones</h5>
               <p class="card-text"></p>
