--- a/DjangoClase-main/newPage/templates/pages/home.html
+++ b/DjangoClase-main/newPage/templates/pages/home.html
@@ -64,10 +64,13 @@
             <img src="{%static 'img/no.png'%}" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="{%static 'img/img/img_home/FORZA.jpg'%}" class="d-block w-100" alt="..." />
+            <img src="{%static 'img/anuncio1.png'%}" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="{%static 'img/img/img_home/GOW.jpg'%}" class="d-block w-100" alt="..." />
+            <img src="{%static 'img/anuncio2.png'%}" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img src="{%static 'img/anuncio3.png'%}" class="d-block w-100" alt="..." />
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
@@ -127,12 +130,5 @@
         </div>
       </div>
     </div>
-    <center>
-    <div class="contenedor4">
-      <a href="{%url 'catalogo'%}">
-        <img id="img_cont4_l" src="{%static ''%}" alt="" />
-      </a>
-    </div>
-    </center>
   </body>
 </html>
