--- a/DjangoClase-main/newPage/templates/pages/catalogo.html
+++ b/DjangoClase-main/newPage/templates/pages/catalogo.html
@@ -60,52 +60,51 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card ">
-            <a href="{%url 're4'%}"><img src="{% static 'img/Bici1.png'%}" class="img-thumbnail w-auto m-auto " alt="..." ></a>
+            <a href="{%url 'Bici1'%}"><img src="{% static 'img/Bici1.png'%}" class="img-thumbnail w-auto m-auto " alt="..." ></a>
             <div class="card-body">
               <h5 class="card-title">Bicicleta Cannondale</h5>
               <p class="card-text">$549.990 CLP</p>
-              <a class="btn btn-primary" href="{%url 're4'%}" role="button">Comprar</a>
+              <a class="btn btn-primary" href="{%url 'Bici1'%}" role="button">Comprar</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card ">
-            <a href="{%url 'hk'%}"><img src="{% static 'img/Bici2_3.png'%}" class="img-thumbnail w-auto m-auto " alt="..."></a>
+            <a href="{%url 'Bici2'%}"><img src="{% static 'img/Bici2_3.png'%}" class="img-thumbnail w-auto m-auto " alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">BICICLETA GT 20 SLAMMER</h5>
               <p class="card-text">$299.990CLP</p>
-              <a class="btn btn-primary" href="{%url 'hk'%}" role="button">Comprar</a>
+              <a class="btn btn-primary" href="{%url 'Bici2'%}" role="button">Comprar</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <a href="{%url 'ktn' %}"><img src="{% static 'img/Bici3.png'%}" class="img-thumbnail w-auto m-auto" alt="..."></a>
+            <a href="{%url 'Bici3' %}"><img src="{% static 'img/Bici3.png'%}" class="img-thumbnail w-auto m-auto" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">BICICLETA INFANTIL</h5>
               <p class="card-text">$75.990CLP</p>
-              <a class="btn btn-primary" href="{%url 'ktn'%}" role="button">Comprar</a>
+              <a class="btn btn-primary" href="{%url 'Bici3'%}" role="button">Comprar</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card ">
-            <a href="{%url 'Gow' %}"><img src="{%static 'img/Bici4.png'%}" class="img-thumbnail w-auto m-auto" alt="..."></a>
+            <a href="{%url 'Bici4' %}"><img src="{%static 'img/Bici4.png'%}" class="img-thumbnail w-auto m-auto" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">BICICLETA EZWAY ARO 27.5</h5>
               <p class="card-text">$999.990CLP</p>
-              <a class="btn btn-primary" href="{%url 'Gow'%}" role="button">Comprar</a>
-
+              <a class="btn btn-primary" href="{%url 'Bici4'%}" role="button">Comprar</a>
             </div>
           </div>
         </div>
         <div class="col">
             <div class="card ">
-              <a href="{%url 'fh5' %}"><img src="{%static 'img/Bici5.png'%}" class="img-thumbnail w-auto m-auto" alt="..."></a>
+              <a href="{%url 'bici5' %}"><img src="{%static 'img/Bici5.png'%}" class="img-thumbnail w-auto m-auto" alt="..."></a>
               <div class="card-body">
                 <h5 color="black" class="card-title" >BICICLETA KONA MAHUNA 2023</h5>
                 <p class="card-text">$799.990CLP</p>
-                <a class="btn btn-primary" href="{%url 'fh5'%}" role="button">Comprar</a>
+                <a class="btn btn-primary" href="{%url 'bici5'%}" role="button">Comprar</a>
               </div>
             </div>
           </div>
