navbar otrah eh

--- a/DjangoClase-main/newPage/templates/pages/home.html
+++ b/DjangoClase-main/newPage/templates/pages/home.html
@@ -50,7 +50,7 @@
               <a class="nav-link" href="{%url 'contacto'%}">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{%url 'tokens'%}">Reparaciones y Mantenciones</a>
+              <a class="nav-link" href="{%url 'arreglo'%}">Reparaciones y Mantenciones</a>
             </li>
           </ul>
         </div>
@@ -99,7 +99,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <a href="{% url 'Gow' %}"><img src="{% static 'img/Bici4.png' %}" class="img-thumbnail w-auto m-auto" alt="..." /></a>
+            <a href="{% url 'bici4' %}"><img src="{% static 'img/Bici4.png' %}" class="img-thumbnail w-auto m-auto" alt="..." /></a>
             <div class="card-body">
               <h5 class="card-title">Lo más Vendido</h5>
               <p class="card-text"></p>
@@ -108,7 +108,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <a href="{% url 're4' %}">
+            <a href="{% url 'bici1' %}">
               <img src="{% static 'img/Bici1_2.jpg' %}" class="img-thumbnail w-auto m-auto" alt="..." />
             </a>
             <div class="card-body">
@@ -119,7 +119,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <a href="{% url 'tokens' %}"> 
+            <a href="{% url 'arreglo' %}"> 
               <img src="{% static 'img/reparo.png' %}" class="img-thumbnail w-auto m-auto" alt="..."> 
             </a>
             <div class="card-body">
