--- a/DjangoClase-main/newPage/templates/pages/creacion_user.html
+++ b/DjangoClase-main/newPage/templates/pages/creacion_user.html
@@ -54,7 +54,7 @@
               <a class="nav-link" href="{%url 'contacto'%}">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{%url 'tokens'%}">Reparaciones y Mantenciones</a>
+              <a class="nav-link" href="{%url 'arreglo'%}">Reparaciones y Mantenciones</a>
             </li>
           </ul>
         </div>
