--- a/DjangoClase-main/newPage/templates/pages/catalogo.html
+++ b/DjangoClase-main/newPage/templates/pages/catalogo.html
@@ -50,7 +50,7 @@
               <a class="nav-link" href="{%url 'contacto'%}">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{%url 'arreglo'%}">Reparaciones y Mantenciones</a>
+              <a class="nav-link" href="{%url 'Arreglo'%}">Reparaciones y Mantenciones</a>
             </li>
           </ul>
         </div>
@@ -100,11 +100,11 @@
         </div>
         <div class="col">
             <div class="card ">
-              <a href="{%url 'bici5' %}"><img src="{%static 'img/Bici5.png'%}" class="img-thumbnail w-auto m-auto" alt="..."></a>
+              <a href="{%url 'Bici5' %}"><img src="{%static 'img/Bici5.png'%}" class="img-thumbnail w-auto m-auto" alt="..."></a>
               <div class="card-body">
                 <h5 color="black" class="card-title" >BICICLETA KONA MAHUNA 2023</h5>
                 <p class="card-text">$799.990CLP</p>
-                <a class="btn btn-primary" href="{%url 'bici5'%}" role="button">Comprar</a>
+                <a class="btn btn-primary" href="{%url 'Bici5'%}" role="button">Comprar</a>
               </div>
             </div>
           </div>
