--- a/DjangoClase-main/newPage/templates/pages/home.html
+++ b/DjangoClase-main/newPage/templates/pages/home.html
@@ -99,7 +99,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <a href="{% url 'bici4' %}"><img src="{% static 'img/Bici4.png' %}" class="img-thumbnail w-auto m-auto" alt="..." /></a>
+            <a href="{% url 'Bici4' %}"><img src="{% static 'img/Bici4.png' %}" class="img-thumbnail w-auto m-auto" alt="..." /></a>
             <div class="card-body">
               <h5 class="card-title">Lo más Vendido</h5>
               <p class="card-text"></p>
@@ -108,7 +108,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <a href="{% url 'bici1' %}">
+            <a href="{% url 'Bici1' %}">
               <img src="{% static 'img/Bici1_2.jpg' %}" class="img-thumbnail w-auto m-auto" alt="..." />
             </a>
             <div class="card-body">
@@ -119,7 +119,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <a href="{% url 'arreglo' %}"> 
+            <a href="{% url 'Arreglo' %}"> 
               <img src="{% static 'img/reparo.png' %}" class="img-thumbnail w-auto m-auto" alt="..."> 
             </a>
             <div class="card-body">
