--- a/DjangoClase-main/newPage/templates/pages/Arreglo.html
+++ b/DjangoClase-main/newPage/templates/pages/Arreglo.html
@@ -53,7 +53,7 @@
               <a class="nav-link" href="{%url 'contacto'%}">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{%url 'arreglo'%}">Reparaciones y Mantenciones</a>
+              <a class="nav-link" href="{%url 'Arreglo'%}">Reparaciones y Mantenciones</a>
             </li>
           </ul>
         </div>
@@ -66,7 +66,7 @@
           <div class='col-lg-6 text-center mx-auto fw-bolder p-5'>
             <h2>Ingrese su Informacion <h2/>    
               <center>
-                <form action="{% url 'tokens' %}" method="POST">
+                <form action="{% url 'Arreglo' %}" method="POST">
                   {% csrf_token %}                  
                   <div>
                       <label for="Rut" class="form-label col-md-6">Rut</label>
