--- a/DjangoClase-main/newPage/templates/pages/Bici2.html
+++ b/DjangoClase-main/newPage/templates/pages/Bici2.html
@@ -50,7 +50,7 @@
               <a class="nav-link" href="{%url 'contacto'%}">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{%url 'arreglo'%}">Reparaciones y Mantenciones</a>
+              <a class="nav-link" href="{%url 'Arreglo'%}">Reparaciones y Mantenciones</a>
             </li>
           </ul>
         </div>
